unpackaged/main/default/objects/Account/fields/CH_field__c.field-meta.xml
<CustomField>
        <fullName>CH_field__c</fullName>
        <defaultValue>true</defaultValue>
        <label>CH field</label>
        <type>Checkbox</type>
    </CustomField>