unpackaged/main/default/objects/Account/fields/New_Checkbox_Field__c.field-meta.xml
<CustomField>
        <fullName>New_Checkbox_Field__c</fullName>
        <defaultValue>true</defaultValue>
        <label>New Checkbox Field</label>
        <type>Checkbox</type>
    </CustomField>