unpackaged/main/default/objects/Account/fields/Pearson__c.field-meta.xml
<CustomField>
        <fullName>Pearson__c</fullName>
        <label>Pearson</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>This</fullName>
                </value>
                <value>
                    <fullName>Is</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>AnotherTest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>