unpackaged/main/default/objects/Account/fields/Recent_Account_for_Textiles_Department__c.field-meta.xml
<CustomField>
        <fullName>Recent_Account_for_Textiles_Department__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Recent Account for Textiles Department</label>
        <type>Checkbox</type>
    </CustomField>