unpackaged/main/default/objects/Account/recordTypes/Kris_Test.recordType-meta.xml
<RecordType>
        <fullName>Kris_Test</fullName>
        <active>true</active>
        <label>Kris Test</label>
    </RecordType>